--- a/fcdg/src/pages/css/Home.css
+++ b/fcdg/src/pages/css/Home.css
@@ -1,3 +1,16 @@
+.bg {
+  background-image: url("../../assets/img/logo/facebook\ banner.jpg");
+  background-attachment: fixed;
+  /* background-size: contain; */
+  background-repeat: no-repeat;
+  background-position: top;
+  width: 100vw;
+  height: 100vh;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: contain;
+}
 .App {
   text-align: center;
 }
