--- a/fcdg/src/components/tiles/Tiles.css
+++ b/fcdg/src/components/tiles/Tiles.css
@@ -1,10 +1,10 @@
-.card body {
-    width: 50%;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    max-width: 300px;
+.card {
+    color: red;
+    max-width: 250px;
     margin: auto;
     text-align: center;
     font-family: arial;
+    border: red;
 }
 .title{
     font-size: 30px;
@@ -14,24 +14,14 @@
     color: grey;
     font-size: 17px;
 }
-
-.card button {
-    border: none;
-    outline: 0;
-    padding: 12px;
-    color: white;
-    background-color: #000;
-    text-align: center;
-    cursor: pointer;
-    width: 100%;
-    font-size: 18px;
-}
-
 .card:hover {
     opacity: 0.8;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.267);
 }
-
-.card {
-color: turquoise;
-width: 18rem;
+.image{
+    width: 100%;;
+    height: 100%;
+    padding-left: 5px;
+    padding-top: 5px;
+    padding-right: 5px;
 }
