--- a/fcdg/src/components/home/Home.css
+++ b/fcdg/src/components/home/Home.css
@@ -1,5 +1,6 @@
 .bg {
   background-image: url("../../assets/img/logo/facebook\ banner.jpg");
+  padding-bottom: 44vh;
   background-attachment: fixed;
   /* background-size: contain; */
   background-repeat: no-repeat;
