--- a/fcdg/src/components/tiles/Tiles.css
+++ b/fcdg/src/components/tiles/Tiles.css
@@ -1,10 +1,20 @@
 .card {
-    color: red;
-    max-width: 250px;
-    margin: auto;
+    color: rgb(0, 0, 0);
+
+    width: 350px;
+    height: 350px;
+    margin: 10px;
     text-align: center;
     font-family: arial;
     border: red;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.067);
+}
+.card-title {
+    color: rgb(0, 0, 0);
+}
+.card-text{
+    color: rgb(126, 126, 126);
+    text-anchor: middle;
 }
 .title{
     font-size: 30px;
@@ -18,10 +28,4 @@
     opacity: 0.8;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.267);
 }
-.image{
-    width: 100%;;
-    height: 100%;
-    padding-left: 5px;
-    padding-top: 5px;
-    padding-right: 5px;
-}
+
