--- a/fcdg/src/components/home/Home.css
+++ b/fcdg/src/components/home/Home.css
@@ -7,7 +7,7 @@
   background-position: top;
   width: 100vw;
   height: 40vh;
-  -webkit-background-size: cover;
+  -webkit-background-size: top;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: contain;
