added delete button

--- a/fcdg/client/src/components/admin/Admin.css
+++ b/fcdg/client/src/components/admin/Admin.css
@@ -35,3 +35,10 @@
 .tableLayout {
   table-layout: fixed;
 }
+.delbtn {
+  color: white;
+  background-color: red;
+}
+.required {
+  color: rgb(230, 0, 0);
+}
