--- a/fcdg/client/src/pages/admin/Admin.css
+++ b/fcdg/client/src/pages/admin/Admin.css
@@ -42,3 +42,11 @@
 .required {
   color: rgb(230, 0, 0);
 }
+.submit {
+  color: white;
+  background-color: rgb(0, 156, 8);
+}
+.p2 {
+  font-size: small;
+  color: rgb(114, 114, 114);
+}
